--- a/index.html
+++ b/index.html
@@ -443,7 +443,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button data-modal-close><span></span></button>
+        <button class="modal-button" data-modal-close>
+          <svg class="button-close" width="11" height="11">
+            <use href="./images/"></use>
+          </svg>
+        </button>
       </div>
     </div>
 
