--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" data-modal-close>
-          <svg class="button-close" width="11" height="11">
-            <use href="./images/"></use>
+          <svg class="button-icon">
+            <use class="button-svg" href="./images/svg/sprite.svg#cross"></use>
           </svg>
         </button>
       </div>
