--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
       <div class="modal">
         <button class="modal-button" data-modal-close>
           <svg class="button-icon">
-            <use class="button-svg" href="./images/svg/sprite.svg#cross"></use>
+            <use class="button-svg" href="./images/svg/sprite.svg#close"></use>
           </svg>
         </button>
       </div>
